acabado index y logo a tamano correcto
se acabo index.html y se hizo un pequeno index.css para que se vea parecido a la imagen de las instrucciones. Tambien se crearon dos archivos css en la misma carpeta (\CSS)  para formatear esas dos paginas. Aunque pudieran ser formateadas con los mismos estilos puede ser bueno a futuro tener los 3 archivos.

Tambien se cambio el logo a un tamano adecuado.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,62 @@
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/index.css" />
 </head>
 <body>
-    
+    <header>
+        <img id="logo" src="img/logo.svg" alt="Logo de la pagina" width="100">
+        <h1>Hoja de Vida</h1>
+        <h2>Fernando Barahona </h2><h3>Quito, 6 de Enero de 2018</h3>
+    </header>
+    <nav>
+        <h2>Menu: </h2>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="HTML/educacion.html">EDUCACION</a></li>
+            <li><a href="HTML/experiencia.html">EXPERIENCIA</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section id="informacion_Personal">
+            <h2>Informacion Personal</h2>
+            <img src="img/foto2.jpg" alt="foto de Fernando Barahona" style="display: block">
+            <p>
+                Soy Ingeniero Electronico, graduado en la Escuela Politecnica del 
+                Ejercito (ESPE). Actualmente aprendiendo programacion WEB. Con direccion
+                a programar tambien backEnd y enfocado a aprender ReactNative para 
+                programar aplicaciones nativas.
+            </p>
+            <h2>Hablilidades</h2>
+            <ul>
+                <li>Idiomas
+                    <ul>
+                        <li>Espanol</li>
+                        <li>Ingles: 100% hablado, 100% escrito</li>
+                        <li>Portugues: 100% hablado, 80% escrito</li>
+                    </ul>
+                </li>
+                <li>Tecnologias
+                    <ul>
+                        <li>Networking</li>
+                        <li>Programacion
+                            <ul>
+                                <li>c++: 70%</li>
+                                <li>ActionScript: 100%</li>
+                                <li>Javascript: 60%</li>
+                                <li>HTML and CSS: 60%</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>Estudios
+                    <ul>
+                        <li>Ingeniero Electronico ESPE 2014</li>
+                        <li>Economia UTPL media carrera</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        Contactame: fenandobarahonad@gmail.com 0992923447
+    </footer>
 </body>
 </html>
