--- a/HTML/experiencia.html
+++ b/HTML/experiencia.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="img/logo.svg" alt="Logo de la pagina" width="100">
+        <img id="logo" src="../img/logo.svg" alt="Logo de la pagina" width="100">
         <h1>Hoja de Vida</h1>
         <h2>Fernando Barahona </h2><h3>Quito, 6 de Enero de 2018</h3>
     </header>
@@ -17,41 +17,17 @@
         <h2>Menu: </h2>
         <ul>
             <li><a href="../index.html">HOME</a></li>
-            <li><a href="HTML/educacion.html">EDUCACION</a></li>
-            <li><a href="HTML/experiencia.html">EXPERIENCIA</a></li>
+            <li><a href="educacion.html">EDUCACION</a></li>
+            <li><a href="experiencia.html">EXPERIENCIA</a></li>
         </ul>
     </nav>
     <main>
-        <section id="tablaEducacion">
-            <table>
-                <tr>
-                    <th>Anio</th>
-                    <th>Institucion</th>
-                    <th>Lugar</th>
-                    <th>Culmino?</th>
-                </tr>
-                <tr>
-                    <td>2014</td>
-                    <td>ESPE</td>
-                    <td>Quito</td>
-                    <td>Si</td>
-                </tr>
-                <tr>
-                    <td>2015</td>
-                    <td>UTPL</td>
-                    <td>Quito</td>
-                    <td>no</td>
-                </tr>
-            </table>
-        </section>
-        <section id="anadirEducacion">
-            <form action="submit">
-                <h2>Agregar Estudios</h2><br>
-                <label for="anio">Anio: </label><input type="date" name="anio" id="anio"><br>
-                <label for="institucion">Institucion: </label><input type="text" name="institucion" id="institucion"><br>
-                <label for="lugar">Lugar: </label><input type="text" name="lugar" id="lugar">
-                <input type="button" value="enviar">
-            </form>
+        <section id="experiencia">
+            <h2>EXPERIENCIA</h2><br>
+            Video de mi experiencia <br>
+            <video src="../media/videoHabilidades.mp4" width="200px" controls></video><br>
+            Audio de mis hobbies <br>
+            <audio src="../media/audioExperiencia.m4a" controls></audio>
         </section>
     </main>
     <footer>
