--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
         <img id="logo" src="img/logo.svg" alt="Logo de la pagina" width="100">
         <h1>Hoja de Vida</h1>
-        <h2>Fernando Barahona </h2><h3>Quito, 6 de Enero de 2018</h3>
+        <h2>Fernando Barahona    </h2><h3>Quito, 6 de Enero de 2018</h3>
     </header>
     <nav>
         <h2>Menu: </h2>
         <ul>
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="index.html">INICIO</a></li>
             <li><a href="HTML/educacion.html">EDUCACION</a></li>
             <li><a href="HTML/experiencia.html">EXPERIENCIA</a></li>
         </ul>
